objects/Fiscal_Period__c.object
<CustomObject>
    <description>Stores the exact calendar days for Steelcase&apos;s corresponding fiscal periods</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End calendar day of the fiscal period</description>
        <inlineHelpText>End calendar day of the fiscal period</inlineHelpText>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Period__c</fullName>
        <description>Fiscal Period</description>
        <inlineHelpText>Example: &quot;P12&quot;</inlineHelpText>
        <label>Fiscal Period</label>
        <length>7</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <description>Fiscal Year</description>
        <inlineHelpText>Example: &quot;FY16&quot;</inlineHelpText>
        <label>Fiscal Year</label>
        <length>7</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Beginning calendar day of the fiscal period</description>
        <inlineHelpText>Beginning calendar day of the fiscal period</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <description>test from eclipse</description>
        <inlineHelpText>Example:</inlineHelpText>
        <label>test</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Fiscal Period</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Fiscal_Period__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fiscal Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fiscal Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>